# kcworks-nlp-tools

./: .gitignore  Pipfile  README.md  docker-compose.yml  env.example  pyproject.toml
docs/notes/: pdf_extraction_repair.md
kcworks_nlp_tools/: config.py  dependencies.py  document_similarity_search.py  kcworks_downloader.py  langchain_semantic_search_test.py  logging_config.py  text_extractor.py  util.py
kcworks_nlp_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kcworks_nlp_tools/data/fast_subjects/: subjects_fast_chronological.tar.bz2  subjects_fast_event.tar.bz2  subjects_fast_formgenre.tar.bz2  subjects_fast_geographic.tar.bz2  subjects_fast_meeting.tar.bz2  subjects_fast_title.tar.bz2  subjects_fast_topical.tar.bz2
kcworks_nlp_tools/database/: db.py
kcworks_nlp_tools/models/: text_extracts.py
tests/: test_downloader.py
