[project]
name = "kcworks-nlp-tools"
version = "0.1.0"
description = "Tools for developing NLP applications for KCWorks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "invenio-subjects-fast",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pymupdf>=1.25.3",
    "pytesseract>=0.3.13",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
    "tensorflow>=2.18.0",
    "tika>=2.6.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[tool.uv.workspace]
members = ["kcworks-nlp-tools"]

[tool.uv.sources]
kcworks-nlp-tools = { workspace = true }

[dependency-groups]
dev = [
    "kcworks-nlp-tools",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
    ".venv",
    "venv",
    "dist",
    "build",
    "kcworks_nlp_tools.egg-info",
    "logs",
    "legacy",
]

[tool.coverage.run]
source = ["kcworks_nlp_tools"]
