[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
name = "kcworks-nlp-tools"
version = "0.1.0"
description = "Tools for developing NLP applications for KCWorks"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "debugpy>=1.8.20",
  "docx>=0.2.4",
  "dotenv>=0.9.9",
  "faiss-cpu>=1.10",
  "invenio-subjects-fast",
  "jq>=1.10",
  "kcworks-nlp-tools",
  "langchain-chroma>=1.1",
  "langchain-community>=0.4.1",
  "langchain-huggingface>=1.2",
  "pandas>=2.2.3",
  "psutil>=7",
  "pymupdf>=1.25.3",
  "pypdf>=6.4.2",
  "pytesseract>=0.3.13",
  "pytest>=8.3.5",
  "requests>=2.32.3",
  "sentence-transformers>=5.2",
  "sqlalchemy>=2.0.44",
  "sqlalchemy-utils>=0.42",
  "tensorflow>=2.18",
  "tf-keras>=2.18",
  "tika>=2.6",
  "torch>=2.6",
  "transformers>=4.49",
]

[dependency-groups]
dev = ["debugpy>=0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
  ".venv",
  "venv",
  "dist",
  "build",
  "kcworks_nlp_tools.egg-info",
  "logs",
  "legacy",
]

[tool.coverage.run]
source = ["kcworks_nlp_tools"]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
kcworks-nlp-tools = { workspace = true }
